welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:5: error: not found: value x
    if (x==getMondeLargeur()-1) {
        ^ZigZag:6: error: not found: value x
    setPos(x,y+1)
           ^ZigZag:6: error: not found: value y
    setPos(x,y+1)
             ^ZigZag:7: error: not found: value x
   	parcoursDroite(x,y)
                       ^ZigZag:7: error: not found: value y
   	parcoursDroite(x,y)
                         ^ZigZag:9: error: not found: value x
    else if (x==0) {
             ^ZigZag:10: error: not found: value x
    setPos(x,y+1)
           ^ZigZag:10: error: not found: value y
    setPos(x,y+1)
             ^ZigZag:11: error: not found: value x
   	parcoursGauche(x,y)
                       ^ZigZag:11: error: not found: value y
   	parcoursGauche(x,y)
                         ^